--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "material",
     "design"
   ],
+  "dependencies": {
+    "prop-types": "^15.5.10"
+  },
   "bugs": {
     "url": "https://github.com/evblurbs/react-native-md-textinput/issues"
   },
